Status pe kaam kia hai

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,38 @@
     <string name="app_name">project</string>
     <string name="speech_prompt"></string>
     <string name="speech_not_supported"></string>
+    <string name="january">January</string>
+    <string name="february">February</string>
+    <string name="march">March</string>
+    <string name="april">April</string>
+    <string name="may">May</string>
+    <string name="june">June</string>
+    <string name="july">July</string>
+    <string name="august">August</string>
+    <string name="september">September</string>
+    <string name="october">October</string>
+    <string name="november">November</string>
+    <string name="december">December</string>
+    <string name="monday">Monday</string>
+    <string name="tuesday">Tuesday</string>
+    <string name="wednesday">Wednesday</string>
+    <string name="thursday">Thursday</string>
+    <string name="friday">Friday</string>
+    <string name="saturday">Saturday</string>
+    <string name="sunday">Sunday</string>
+    <string name="mainCarrierIs">, the carrier is&#160;</string>
+    <string name="mainProfileIsNormal">, the profile is normal&#160;</string>
+    <string name="mainProfileIsSilent">, the profile is silent&#160;</string>
+    <string name="mainProfileIsVibrate">, the profile is vibrate&#160;</string>
+    <string name="mainNoSignal">, there is no phone signal&#160;</string>
+    <string name="mainWifiOnWithNetwork">and the wifi is on and connected to a wifi network named&#160;</string>
+    <string name="mainWifiOnWithoutNetwork">and the wifi is on and not connected to any wifi network.</string>
+    <string name="mainWifiOff">and the wifi is off.</string>
+    <string name="mainCarrierNotAvailable">Unknown</string>
+    <string name="mainPercentAndTime">&#160;percent&#160;</string>
+    <string name="time"> The time is</string>
+    <string name="mainHours">&#160;hours&#160;</string>
+    <string name="mainMinutesAndDate">&#160;minutes and the date is&#160;</string>
+    <string name="mainOf">&#160;of&#160;</string>
+    <string name="mainBatteryChargedAt">The battery is charged at&#160;</string>
 </resources>
